--- a/ML/Assignment2/ex-en-linear-models001-skeleton.ipynb
+++ b/ML/Assignment2/ex-en-linear-models001-skeleton.ipynb
@@ -18,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm"
@@ -39,10 +40,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['mainly', 0, 0.1120954663, 104, 0.0032397408],\n",
+       "       ['mainly', 0, 0.11626830760000001, 109, 0.0032406157000000003],\n",
+       "       ['mainly', 0, 0.11417676360000001, 106, 0.0032670841],\n",
+       "       ...,\n",
+       "       ['not', 0, 0.0459284931, 50, 0.0018088634],\n",
+       "       ['not', 0, 0.0051274659, 8, 0.0050933786],\n",
+       "       ['not', 0, 0.027014026, 34, 0.00025926890000000003]], dtype=object)"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_json('sell-vs-not_balanced_train_data_handout.json',orient='records[4,5,6,7,8,9]')\n",
+    "#df_split = df.to_json(typ='frame')\n",
+    "\n",
+    "df.columns[4:10]\n",
+    "sells = df.values[:,4]\n",
+    "number_of_ads = df.values[:,5]\n",
+    "linkration = df.values[:,6]\n",
+    "numberOfListItems = df.values[:,7]\n",
+    "FractionInput = df.values[:,8] \n",
+    "input_ = df.values[:,9] \n",
+    "\n",
+    "new_def = df.values[:,4:9]\n",
+    "new_def"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -64,10 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 149,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#for example, row in enumerate(new_def[:,0]):    \n",
+    "#    if example == 'mainly':\n",
+    "#        positive.append('positive', new_def[row,:])\n",
+    "#    else:\n",
+    "#        negative.append('negative', new_def[row,:])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,9 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'IFrame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-150-0d102d249fe2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mIFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://webis.de/downloads/lecturenotes/machine-learning/unit-en-logistic-regression.pdf#algorithm-batch-gradient-descent-logistic-loss\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'IFrame' is not defined"
+     ]
+    }
+   ],
    "source": [
     "IFrame(\"https://webis.de/downloads/lecturenotes/machine-learning/unit-en-logistic-regression.pdf#algorithm-batch-gradient-descent-logistic-loss\", 400, 300)"
    ]
